# fsds-house-price-prediction

./: Dockerfile  compose.yaml  main.py  pyproject.toml  requirements.txt
.github/: ruleset.json
.github/workflows/: build-push.yml  deployment.yml  helm-argocd.yml  lint-test.yml  release.yml
app/: main.py
app/utils/: logging.py  middleware.py
deployments/docker/: Dockerfile  compose.yaml
deployments/helm/: Chart.yaml  values.yaml
deployments/helm/templates/: deployment.yaml
deployments/model-serving/: Chart.yaml  values.yaml
