[project]
name = "fastapi-house-price-prediction"
version = "1.0.8"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.96.0",
    "joblib==1.1.0",
    "lightgbm==3.3.4",
    "loguru==0.7.0",
    "pandas==1.4.4",
    "pytest==7.1.2",
    "scikit-learn==1.0.2",
    "uvicorn[standard]==0.22.0",
]
